@@ -1,6 +1,13 @@
 \name{NEWS}
 \title{NEWS file for the gridGraphics package}
 \encoding{UTF-8}
+
+\section{Changes in version 0.5-1}{
+  \itemize{
+    \item Ensure use of Suggested packages is conditional (so
+    \code{plotdiff()} only runs if the Suggested packages are available).
+  }
+}
 \section{Changes in version 0.5-0}{
   \itemize{
     \item \code{grid.echo()} now supports \code{stats::plot.hclust()}
